Wrong positioning due to wrong width calculation wrt width:0 https://bugs.webkit.org/show_bug.cgi?id=50135

Patch by Pravin D <pravind.2k4@gmail.com> on 2012-05-07
Reviewed by Eric Seidel.

Source/WebCore:

Test: fast/block/block-parent-with-zero-width-child.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computePreferredLogicalWidths):
When width is fixed, the specified width must be taken, provided the value is positive.
Width=0 case was being ignored.

LayoutTests:

* fast/block/block-parent-with-zero-width-child-expected.txt: Added.
* fast/block/block-parent-with-zero-width-child.html: Added.

Canonical link: https://commits.webkit.org/103389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116331 268f45cc-cd09-0410-ab3c-d52691b4dbfc